k8s/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cqc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: cqc
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15
        ports:
        - containerPort: 5432
        readinessProbe:
          exec:
            command: ["pg_isready", "-U", "darwinist"]
          initialDelaySeconds: 5
          periodSeconds: 4
        livenessProbe:
          exec:
            command: ["pg_isready", "-U", "darwinist"]
          initialDelaySeconds: 15
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: postgres-storage-cqc
      volumes:
      - name: postgres-storage-cqc
        persistentVolumeClaim:
          claimName: postgres-pvc-cqc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service-cqc
  namespace: cqc
spec:
  type: ClusterIP
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
