k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: staging-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/client-max-body-size: "2000m"
    nginx.ingress.kubernetes.io/proxy-body-size: "2000m"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"    
spec:
  tls:
    - hosts:
        - cqc.darwinist.io
      secretName: $CERT_NAME
  rules:
    - host: cqc.darwinist.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cqc-companies
                port:
                  number: 80
